# TFM-Landmark-Based-Localization

./: CMakeLists.txt  README.md  package.xml
config/: global_parameters.yaml  landmark_pole_poses_town02.json  landmark_poses.json  landmark_poses_town02.json
launch/: landmark_localitation.launch.py
msg/: Detection.msg  OrientedDetectionArray.msg  Results.msg
scripts/: carla_reduce_map.py  example.py  h_e.py  hungarian_algorithm_example.py  second_client.py
src/: fake_pole_detection_node.cpp  landmarks_graph_location_node.cpp  localitation_node.cpp  location_statistics_node.cpp  main_node.cpp  results_node.cpp  statistics_node.cpp
src/g2o_examples/: g2o_ba_demo.cpp  g2o_test.cpp  gps_example.cpp  utils.hpp
src/utils/: errors.cpp  utils.cpp
statistics/: Estadisticas TFM test1.xlsx  Estadisticas TFM test2.xlsx  Estadisticas TFM test3.xlsx  Estadisticas TFM test4.xlsx  Estadisticas TFM test5.xlsx  Estadisticas TFM test6.xlsx  Plantilla Estadisticas TFM.xlsx  file_name.csv  test-2024-04-01--20-24-35--error01-06.csv  test-2024-04-01--20-30-19--error01-06..csv  test-2024-04-01--20-34-1--error00-04.csv  test-2024-04-01--20-37-34--error00-04.csv  test-2024-04-01--20-43-2--error00-04.csv  test-2024-04-01--20-49-46--error00-04..csv  test-2024-05-01--1-23-28.csv  test-2024-05-01--1-32-14.csv  test-2024-05-01--1-42-27.csv  test-2024-05-01--1-51-3.csv  test-2024-05-06--19-39-30.csv  test-2024-05-06--23-23-38.csv  test-2024-05-06--23-33-27.csv  test-2024-05-06--23-49-57.csv  test-2024-05-06--23-58-52.csv  test-2024-05-12--13-48-36.csv  test-2024-05-12--13-57-28.csv  test-2024-06-17--14-50-49.csv  test-2024-06-17--14-51-34.csv  test-2024-06-17--14-51-42.csv  test-2024-06-25--21-17-21.csv  test-2024-06-25--21-19-36.csv  test-2024-06-25--21-28-2.csv  test-2024-06-25--21-28-41.csv
util_scripts/: carla_reduce_map.py
